Mon May 26 01:02:09 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Show leaked tempfiles line-by-line.

Sun May 25 23:02:06 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (MiniTest::Assertions#diff): Remove
	  tempfiles.

Sun May 25 22:42:27 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Check tempfile leak for each test class.

Sun May 25 20:31:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_{getcontext,setcontext}): do not
	  disable ucontext.h entirely, but disable use of functions only.
	  `ucontext_t` is necessary in the signal handler now.

Sun May 25 20:00:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (check_stack_overflow): revert part of r46100, the
	  previous condition was correct, and fix compilation error on
	  other architecture linux.  [ruby-core:62746] [Bug #9862]

Sun May 25 17:09:13 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Less ObjectSpace.each_object(Tempfile)
	  invocation.

Sun May 25 16:54:06 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Use Thread.list instead of
	  ObjectSpace.each_object(Thread).

Sun May 25 15:53:54 2014  Tanaka Akira  <akr@fsij.org>

	* lib/rinda/ring.rb (Rinda::RingServer#shutdown): Join the killed
	  threads.

Sun May 25 15:26:17 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/utils.rb: Override the inspect method of the thread
	  used in WEBrick::Utils::TimeoutHandler.

Sun May 25 14:22:30 2014  Tanaka Akira  <akr@fsij.org>

	* test/openssl: Join threads.

Sun May 25 12:46:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_bug_context): new function to report bug with
	  context.

	* vm_dump.c (rb_vm_bugreport): accepts `ucontext_t` argument to
	  dump machine regisiters.  based on [GH-584].

	* signal.c (sigbus, sigsegv): dump machine regisiters if available.

Sun May 25 12:32:42 2014  Tanaka Akira  <akr@fsij.org>
