@@ -1,6 +1,7 @@
-Mon May 26 01:02:09 2014  Tanaka Akira  <akr@fsij.org>
+Mon May 26 01:07:51 2014  Tanaka Akira  <akr@fsij.org>
 
-	* test/lib/minitest/unit.rb: Show leaked tempfiles line-by-line.
+	* test/lib/minitest/unit.rb: Show leaked threads and tempfiles
+	  line-by-line.
 
 Sun May 25 23:02:06 2014  Tanaka Akira  <akr@fsij.org>
 
